// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MauTextField > matches the snapshot 1`] = `
<div>
  <div
    class="string input optional "
  >
    <label
      for="the_name"
    >
      The Label
    </label>
    <input
      id="the_name"
      name="the_name"
      placeholder="e.g. like this"
      type="text"
    />
    <p
      class="inline-hints"
    >
      <span>
        here is a clue
      </span>
    </p>
  </div>
</div>
`;

exports[`MauTextField > matches the snapshot if id is provided 1`] = `
<div>
  <div
    class="string input optional "
  >
    <label
      for="the_name"
    >
      The Label
    </label>
    <input
      id="different-than-name"
      name="the_name"
      placeholder="e.g. like this"
      type="text"
    />
    <p
      class="inline-hints"
    >
      <span>
        here is a clue
      </span>
    </p>
  </div>
</div>
`;

exports[`MauTextField > matches the snapshot if type is provided 1`] = `
<div>
  <div
    class="string input optional "
  >
    <label
      for="the_name"
    >
      The Label
    </label>
    <input
      id="the_name"
      name="the_name"
      placeholder="e.g. email"
      type="email"
    />
  </div>
</div>
`;
